--- a/mix-plugin-github/package.yaml
+++ b/mix-plugin-github/package.yaml
@@ -1,3 +1,6 @@
+defaults:
+  local: ../mix-base.yaml
+
 name:                mix-plugin-github
 version:             0.1.0
 license:             MIT
@@ -9,31 +12,7 @@ extra-source-files:
 - README.md
 - CHANGELOG.md
 
-ghc-options:
-- -Wall
-- -Wcompat
-- -Wincomplete-record-updates
-- -Wincomplete-uni-patterns
-- -Wredundant-constraints
-
-default-extensions:
-- NoImplicitPrelude
-
-- ConstraintKinds
-- FlexibleContexts
-- FlexibleInstances
-- GeneralizedNewtypeDeriving
-- OverloadedStrings
-- PolyKinds
-- RankNTypes
-- StandaloneDeriving
-- TypeFamilies
-- TypeSynonymInstances
-
 dependencies:
-- base >= 4.7 && < 5
-- rio >= 0.1.1.0
-- extensible
 - mix
 - github
 
