--- a/shh-cmd/package.yaml
+++ b/shh-cmd/package.yaml
@@ -1,3 +1,6 @@
+defaults:
+  local: ../base.yaml
+
 name:                shh-cmd
 version:             0.1.0
 license:             MIT
@@ -9,15 +12,7 @@ extra-source-files:
 - README.md
 - CHANGELOG.md
 
-ghc-options:
-- -Wall
-- -Wcompat
-- -Wincomplete-record-updates
-- -Wincomplete-uni-patterns
-- -Wredundant-constraints
-
 dependencies:
-- base >= 4.7 && < 5
 - text
 - shh
 
