--- a/stack.yaml
+++ b/stack.yaml
@@ -8,5 +8,4 @@ packages:
 extra-deps:
 - extensible-0.5
 - github-0.21
-- github: matsubara0507/drone-haskell
-  commit: aa6f5152dd9ea72cb48a32bdc58c91de2bdc21a9
+- drone-1.0.1
