--- a/mix-plugin-github/mix-plugin-github.cabal
+++ b/mix-plugin-github/mix-plugin-github.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 878b048633e3bf3e496aea398829290424667dafd510268bb112d9af9f33ddbf
+-- hash: cfeb608b950f76bed83f54b9d02008efc14a52d9a38ee2004f365216af3775db
 
 name:           mix-plugin-github
 version:        0.1.1
@@ -29,7 +29,7 @@ library
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-    , extensible
+    , extensible >=0.6
     , github
     , mix
     , rio >=0.1.1.0
