--- a/stack.yaml
+++ b/stack.yaml
@@ -6,7 +6,8 @@ packages:
 - mix-plugin-drone
 - mix-plugin-shell
 extra-deps:
-- extensible-0.5
+- extensible-0.6
+- membership-0
 - github-0.21
 - github: matsubara0507/drone-haskell
   commit: aa6f5152dd9ea72cb48a32bdc58c91de2bdc21a9
