--- a/mix-plugin-github/mix-plugin-github.cabal
+++ b/mix-plugin-github/mix-plugin-github.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: cc45ddd343bff1ee33131b52f89285656e19cebbbfc128b77fed6ab21a7737d1
+-- hash: 70eca15fbd2b89d6b3b8ad861068318e90f7f828fbd24fc6a0671737e9dfcd28
 
 name:           mix-plugin-github
 version:        0.1.2
@@ -30,7 +30,7 @@ library
   build-depends:
       base >=4.7 && <5
     , extensible >=0.6
-    , github
+    , github >=0.24
     , mix
     , rio >=0.1.1.0
   default-language: Haskell2010
