--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -10,7 +10,9 @@ jobs:
   build:
     name: Execute each sample codes
     runs-on: ubuntu-18.04
-
+    strategy:
+      matrix:
+        cache-version: 1
     steps:
     - uses: actions/checkout@v2
     - name: Cache .stack
@@ -18,7 +20,7 @@ jobs:
       uses: actions/cache@v1.1.2
       with:
         path: ~/.stack
-        key: ${{ runner.os }}-stack-${{ hashFiles('**/package.yaml') }}-${{ hashFiles('**/stack.yaml.lock') }}
+        key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml.lock') }}-${{ matrix.cache-version }}
         restore-keys: |
           ${{ runner.os }}-stack-
     - uses: matsubara0507/setup-stack@master
