--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/cache@v1.1.2
       with:
         path: ~/.stack
-        key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml.lock') }}-${{ matrix.cache-version }}
+        key: ${{ runner.os }}-stack-${{ hashFiles('./stack.yaml') }}-${{ matrix.cache-version }}
         restore-keys: |
           ${{ runner.os }}-stack-
     - uses: matsubara0507/setup-stack@master
