--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/cache@v1.1.2
       with:
         path: ~/.stack
-        key: ${{ runner.os }}-stack-${{ hashFiles('./stack.yaml') }}-1
+        key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml') }}-1
         restore-keys: |
           ${{ runner.os }}-stack-
     - uses: matsubara0507/setup-stack@master
