--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build packages
       run: stack build
     - name: Exec sample codes
-      run: find */sample/Main.hs | xargs stack runghc
+      run: find */sample/Main.hs | xargs -I{} stack runghc {}
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DRONE_HOST: ${{ secrets.DRONE_HOST }}
