--- a/mix-plugin-xdgcache/mix-plugin-xdgcache.cabal
+++ b/mix-plugin-xdgcache/mix-plugin-xdgcache.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ec2a462d6bc01c6cd216ba68160b59686dffe204eae7c32a2b0fe2ab3874c43c
+-- hash: 867bee047243c8f293a974b7eee5a6f145d1b89a362f33270dcb756558321503
 
 name:           mix-plugin-xdgcache
 version:        0.1.0
@@ -24,7 +24,18 @@ library
       Paths_mix_plugin_xdgcache
   hs-source-dirs:
       src
-  default-extensions: NoImplicitPrelude ConstraintKinds FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving OverloadedStrings PolyKinds RankNTypes StandaloneDeriving TypeFamilies TypeSynonymInstances
+  default-extensions:
+      NoImplicitPrelude
+      ConstraintKinds
+      FlexibleContexts
+      FlexibleInstances
+      GeneralizedNewtypeDeriving
+      OverloadedStrings
+      PolyKinds
+      RankNTypes
+      StandaloneDeriving
+      TypeFamilies
+      TypeSynonymInstances
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
       aeson
