--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -10,23 +10,35 @@ jobs:
   build:
     name: Execute each sample codes
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        ghc: ["8.10.7"]
     steps:
     - uses: actions/checkout@v2
     - name: Cache .stack
       id: cache-stack
-      uses: actions/cache@v1.1.2
+      uses: actions/cache@v2
       with:
         path: ~/.stack
         key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml') }}-1
         restore-keys: |
           ${{ runner.os }}-stack-
-    - uses: matsubara0507/setup-stack@master
+
+    - uses: haskell/actions/setup@v1.2.7
+      name: Setup Haskell
+      with:
+        ghc-version: ${{ matrix.ghc }}
+        enable-stack: true
+        stack-version: 'latest'
+
     - name: Install dependencies
-      run: stack build --only-dependencies
+      run: stack --system-ghc test --only-dependencies
+
     - name: Build packages
-      run: stack build
+      run: stack --system-ghc build
+
     - name: Exec sample codes
-      run: find */sample/Main.hs | xargs -I{} stack runghc --package persistent-template {}
+      run: find */sample/Main.hs | xargs -I{} stack --system-ghc runghc --package persistent-template {}
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DRONE_HOST: ${{ secrets.DRONE_HOST }}
